db-cluster/users/k8s-cluster2/ns-porkeat-c18c6214/ewafe-f1f5c60b/ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ewafe-f1f5c60b-tcp
  namespace: ns-porkeat-c18c6214
spec:
  entryPoints:
  - postgresql
  routes:
  - match: 'HostSNI(`ewafe.seang.shop`) '
    services:
    - name: ewafe-f1f5c60b-postgresql-rw
      port: null
  tls:
    passthrough: true
